# datum

./: CMakeLists.txt
experiments/: CMakeLists.txt  cache_miss.cpp  function_call.cpp  memcpy_vs_loop.cpp  realloc_vs_copy.cpp
include/dtm/: hash_table.hpp  iterator.hpp  tup.hpp  vec.hpp
include/dtm/detail/: config.hpp  iterators.hpp  move_buffer.hpp  ptr.hpp  relocate_buffer.hpp  vec_impl.hpp
src/: CMakeLists.txt
test/: CMakeLists.txt  construction_test_type.hpp  datum_test.cpp  move_buffer_test.cpp  move_only_tracking_type.hpp  relocate_buffer_test.cpp  vec_move_buffer_test.cpp  vec_relocate_buffer_test.cpp  vec_test.cpp
test/benchmarks/: CMakeLists.txt  vec_bench.cpp
